# bitchat-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WHITEPAPER.md  bitchat_structure.txt
.claude/: settings.local.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: commands.rs  config.rs  constants.rs  crypto.rs  encryption.rs  lib.rs  message.rs  peer.rs  protocol.rs  storage.rs  tree.txt
crates/core/src/bluetooth/: compatibility.rs  config.rs  constants.rs  events.rs  gatt.rs  manager.rs  mod.rs  windows.rs  windows_emulator.rs
crates/core/src/commands/: mods.rs
crates/core/src/commands/channel/: channel.rs  mod.rs
crates/core/src/crypto/: encryption.rs  keys.rs  mod.rs
crates/core/src/encryption/: channels.rs  legacy.rs  mod.rs  noise.rs  unified.rs
crates/core/src/messaging/: channel.rs  manager.rs  mod.rs
crates/core/src/network/: bridge.rs  discovery.rs  mod.rs  nostr.rs  tcp.rs  udp.rs
crates/core/src/protocol/: binary.rs  constants.rs  mod.rs  packet.rs  peer_utils.rs  router.rs
crates/core/src/windows/: mod.rs  winrt_discovery.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs  windows_bluetooth_example.rs
docs/: protocol-compatability.md  windows-bluetooth.md
