[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/desktop",
    "crates/cli",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Bluetooth
btleplug = "0.11"

# Cryptography  
ring = "0.17"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI (Desktop) - Fix Windows winapi issue
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.24"
winapi = { version = "0.3", features = ["winuser", "wingdi", "winbase", "wincon"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# iOS/Android compatibility
hex = "0.4"
rand = "0.8"
fastrand = "2.0"

# Optional features
tokio-stream = "0.1"