[package]
name = "bitchat-cli"
version = "0.1.0"
edition = "2021"
description = "SecureMesh CLI Application"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
# Local dependencies
bitchat-core = { path = "../core" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }