[package]
name = "bitchat-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bitchat-cli"
path = "src/main.rs"

[dependencies]
# Core BitChat library
bitchat-core = { path = "../core", features = ["bluetooth"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"