[package]
name = "bitchat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bitchat-core = { path = "../core", features = ["bluetooth"] }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }

[features]
default = ["bluetooth"]
bluetooth = []