[package]
name = "bitchat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
argon2 = "0.5"
ring = "0.17"

# Memory safety
zeroize = { version = "1.6", features = ["derive"] }
subtle = "2.5"

# Random number generation
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking and protocols
bytes = "1.0"

# Bluetooth (optional - may need platform-specific features)
btleplug = { version = "0.11", optional = true }

# Additional Bluetooth support
async-stream = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# File system
dirs = "5.0"

[features]
default = ["bluetooth"]
bluetooth = ["btleplug"]