[package]
name = "bitchat-core"
version = "0.2.0"  # Bump version for Moon protocol
edition = "2021"
description = "Core BitChat protocol implementation with Moon Protocol support"
license = "Unlicense"
repository = "https://github.com/yourusername/bitchat-rust"

[dependencies]
# Core dependencies
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# NEW: Moon Protocol Dependencies
snow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Cryptography
ring = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }

# Utilities
dirs = { workspace = true }  
bytes = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
lz4 = { workspace = true }

# Platform-specific Bluetooth dependencies (conditional)
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
btleplug = { workspace = true }

[features]
default = []
bluetooth = []  # Feature flag to enable Bluetooth functionality

[dev-dependencies]
tokio-test = "0.4"