[package]
name = "bitchat-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
bitchat-core = { path = "../core" }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }