[package]
name = "bitchat-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
bitchat-core = { path = "../core", features = ["bluetooth"] }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }  
hex = { workspace = true }  
winapi = { version = "0.3", features = ["winuser", "wingdi"] }

[features]
default = ["bluetooth"]
bluetooth = []

# Make sure Windows dependencies are available
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement", 
    "Devices_Bluetooth_GenericAttributeProfile",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }